<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="nanodegree_apps">My Nanodegree Apps</string>
    <string name="library_app">Library App</string>
    <string name="my_own_app">Capstone: My own app</string>
    <string name="build_bigger">Build it bigger</string>
    <string name="xyz_reader">xyz reader</string>
</resources>
