<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="0.5"
        android:layout_marginTop="@android:dimen/app_icon_size">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/spotify"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/bigger"
            android:layout_toRightOf="@+id/bigger"
            android:layout_marginTop="25dp"
            android:background="#fff08c35"
            android:layout_marginBottom="@dimen/abc_action_bar_icon_vertical_padding_material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:id="@+id/scores"
            android:layout_gravity="center_horizontal"
            android:layout_alignBottom="@+id/xyz"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:background="#fff08c35"
            android:layout_marginBottom="@dimen/abc_action_bar_icon_vertical_padding_material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/library"
            android:layout_gravity="center_horizontal"
            android:background="#fff08c35"
            android:layout_marginBottom="@dimen/abc_action_bar_icon_vertical_padding_material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_bigger"
            android:id="@+id/bigger"
            android:layout_gravity="center_horizontal"
            android:background="#fff08c35"
            android:layout_marginBottom="@dimen/abc_action_bar_icon_vertical_padding_material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/xyz"
            android:background="#fff08c35"
            android:layout_marginBottom="@dimen/abc_action_bar_icon_vertical_padding_material"
            android:hint="This will start the XYZ Reader App" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_own_app"
            android:id="@+id/myOwn"
            android:layout_gravity="center_horizontal"
            android:background="#ffff1c2e"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nanodegree_apps"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
